<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.userprofile.view.UserProfileActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <EditText
                android:hint="@string/hint_username"
                android:id="@+id/user_profile_et"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1" />

            <EditText
                android:hint="@string/hint_email"
                android:id="@+id/email_profile_et"
                android:inputType="textEmailAddress"
                android:layout_below="@id/user_profile_et"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1" />


            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/sending_pass_reset_button"
                android:layout_below="@id/email_profile_et"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:onClick="onClick"
                android:text="@string/send_password_reset_email"
                android:textStyle="bold" />

            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/remove_user_button"
                android:layout_below="@id/sending_pass_reset_button"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:onClick="onClick"
                android:text="@string/remove_user"
                android:textStyle="bold" />

            <Button
                android:id="@+id/user_profile_update_submit_btn"
                android:layout_below="@+id/remove_user_button"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:onClick="onClick"
                android:text="@string/user_profile_update_submit_txt" />

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>