<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="15dp">


    <TextView
        android:id="@+id/restaurants_near_you"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/restaurants_near_you" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/restaurant_card_list"
        android:layout_below="@id/restaurants_near_you"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent" />


</RelativeLayout>