...
        android:textColor="#f4ad59"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:contentDescription="@string/nav_menu_description"
        android:id="@+id/slide_in_menu_icon"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="end"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
...
